[CSS] fixed-header-js: Do not show the header as it takes too much space

--- a/style.css
+++ b/style.css
@@ -105,6 +105,14 @@ h1 {
   font-weight: normal;
   margin: 0 0 10px;
   text-align: center;
+
+  /* takes too much space */
+  display: none;
+}
+@media print {
+  h1 {
+    display: block;
+  }
 }
 
 /* --- Other elements --- */
